--- a/apps/client-e2e/package.json
+++ b/apps/client-e2e/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "raport_digital-e2e",
+  "name": "client-e2e",
   "version": "0.0.1",
   "private": true,
   "nx": {
     "implicitDependencies": [
-      "raport_digital"
+      "client"
     ]
   }
 }
