--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@raport-digital/raport_digital",
+  "name": "@raport-digital/client",
   "version": "0.0.1",
   "private": true,
   "nx": {
-    "name": "raport_digital"
+    "name": "client"
   }
 }
