--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
   "files": [],
   "references": [
     {
-      "path": "./apps/raport_digital-e2e"
+      "path": "./apps/client-e2e"
     },
     {
-      "path": "./apps/raport_digital"
+      "path": "./apps/client"
     }
   ]
 }
