--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -30,5 +30,10 @@
     "eslint.config.cjs",
     "eslint.config.mjs"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.vue"]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.vue"],
+  "references": [
+    {
+      "path": "../../libs/client-api-types/tsconfig.lib.json"
+    }
+  ]
 }
