--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/client-api-types"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
