--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@trpc/client": "^11.1.2",
+    "@trpc/server": "^11.1.2",
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -47,6 +50,7 @@
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-vue": "^9.16.1",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
@@ -64,6 +68,7 @@
     "webpack-cli": "^5.1.4"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "libs/*"
   ]
 }
