--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -7,7 +7,8 @@
     "jsx": "preserve",
     "jsxImportSource": "vue",
     "resolveJsonModule": true,
-    "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
+    "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
+    "lib": ["es2022", "DOM"]
   },
   "exclude": [
     "out-tsc",
