--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -45,5 +45,8 @@
         }
       }
     }
+  },
+  "scripts": {
+    "add-account": "ts-node --project tsconfig.app.json ./src/add-account.ts"
   }
 }
