--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^6.7.0",
+    "@quixo3/prisma-session-store": "^3.1.13",
+    "@tanstack/vue-query": "^5.75.4",
     "@trpc/client": "^11.1.2",
     "@trpc/server": "^11.1.2",
+    "@trpc/tanstack-react-query": "^11.1.2",
+    "argon2": "^0.43.0",
     "axios": "^1.6.0",
+    "express-session": "^1.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "vue": "^3.5.13",
@@ -38,6 +45,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.36",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@vitejs/plugin-vue": "^5.2.3",
@@ -57,8 +65,9 @@
     "jsdom": "~22.1.0",
     "nx": "20.8.0",
     "prettier": "^2.6.2",
+    "prisma": "^6.7.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
