--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
@@ -72,8 +73,10 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
+    "vite-plugin-vuetify": "^2.1.1",
     "vitest": "^3.0.0",
     "vue-tsc": "^2.2.8",
+    "vuetify": "^3.8.3",
     "webpack-cli": "^5.1.4"
   },
   "workspaces": [
