--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
