feat(server): add trpc ui

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nx": "20.8.0",
     "prettier": "^2.6.2",
     "prisma": "^6.7.0",
+    "trpc-ui": "^1.0.15",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
