--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -32,9 +32,5 @@
     "eslint.config.mjs"
   ],
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.vue"],
-  "references": [
-    {
-      "path": "../../libs/client-api-types/tsconfig.lib.json"
-    }
-  ]
+  "references": []
 }
