fix(server, client): use superjson as transformer

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,7 +10,8 @@
           "command": "webpack-cli build",
           "args": [
             "node-env=production"
-          ]
+          ],
+          "runtimeArgs": ["--experimental-require-module"]
         },
         "configurations": {
           "development": {
@@ -28,7 +29,8 @@
         ],
         "options": {
           "buildTarget": "@raport-digital/server:build",
-          "runBuildTargetDependencies": false
+          "runBuildTargetDependencies": false,
+          "runtimeArgs": ["--experimental-require-module"]
         },
         "configurations": {
           "development": {
