--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "superjson": "^2.2.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "zod": "^3.24.4"
