--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@trpc/tanstack-react-query": "^11.1.2",
     "argon2": "^0.43.0",
     "axios": "^1.6.0",
+    "csv-parse": "^5.6.0",
+    "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -69,7 +71,7 @@
     "nx": "20.8.0",
     "prettier": "^2.6.2",
     "prisma": "^6.7.0",
-    "trpc-ui": "^1.0.15",
+    "trpc-ui": "npm:@levirs565/trpc-ui@^1.0.15",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
