feat(client): add periode views

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -32,5 +32,9 @@
     "eslint.config.mjs"
   ],
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.vue"],
-  "references": []
+  "references": [
+    {
+      "path": "../../libs/client-api-types/tsconfig.lib.json"
+    }
+  ]
 }
