--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
+    "pinia": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "superjson": "^2.2.2",
