--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/client": "^11.1.2",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "https://pkg.pr.new/trpc/trpc/@trpc/tanstack-react-query@6776",
+    "@vueuse/core": "^13.3.0",
     "argon2": "^0.43.0",
     "axios": "^1.6.0",
     "csv-parse": "^5.6.0",
