--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -54,5 +54,8 @@
   },
   "scripts": {
     "add-account": "ts-node --project tsconfig.app.json ./src/add-account.ts"
+  },
+  "dependencies": {
+    "pdfmake": "^0.2.20"
   }
 }
