--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
+    "pdfmake": "^0.2.20",
     "pinia": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -55,6 +56,7 @@
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "@types/pdfmake": "^0.2.11",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
