--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@trpc/client": "^11.1.2",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "https://pkg.pr.new/trpc/trpc/@trpc/tanstack-react-query@6776",
+    "@types/fs-extra": "^11.0.4",
     "@vueuse/core": "^13.3.0",
     "argon2": "^0.43.0",
     "axios": "^1.6.0",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
+    "fs-extra": "^11.3.0",
     "pdfmake": "^0.2.20",
     "pinia": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "sharp": "^0.34.2",
     "superjson": "^2.2.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
