--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
     "fs-extra": "^11.3.0",
+    "image-size": "^2.0.2",
     "pdfmake": "^0.2.20",
     "pinia": "^3.0.2",
     "reflect-metadata": "^0.1.13",
