--- a/package.json
+++ b/package.json
@@ -40,19 +40,19 @@
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/devkit": "20.8.0",
-    "@nx/eslint": "20.8.0",
-    "@nx/eslint-plugin": "20.8.0",
-    "@nx/jest": "20.8.0",
-    "@nx/js": "20.8.0",
-    "@nx/nest": "^20.8.0",
-    "@nx/node": "20.8.0",
-    "@nx/playwright": "20.8.0",
-    "@nx/vite": "20.8.0",
-    "@nx/vue": "20.8.0",
-    "@nx/web": "20.8.0",
-    "@nx/webpack": "20.8.0",
-    "@nx/workspace": "20.8.0",
+    "@nx/devkit": "21.1.3",
+    "@nx/eslint": "21.1.3",
+    "@nx/eslint-plugin": "21.1.3",
+    "@nx/jest": "21.1.3",
+    "@nx/js": "21.1.3",
+    "@nx/nest": "21.1.3",
+    "@nx/node": "21.1.3",
+    "@nx/playwright": "21.1.3",
+    "@nx/vite": "21.1.3",
+    "@nx/vue": "21.1.3",
+    "@nx/web": "21.1.3",
+    "@nx/webpack": "21.1.3",
+    "@nx/workspace": "21.1.3",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -77,7 +77,7 @@
     "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "20.8.0",
+    "nx": "21.1.3",
     "prettier": "^2.6.2",
     "prisma": "^6.7.0",
     "trpc-ui": "npm:@levirs565/trpc-ui@^1.0.15",
