--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rxjs": "^7.8.0",
     "sharp": "^0.34.2",
     "superjson": "^2.2.2",
+    "tmp-promise": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "zod": "^3.24.4"
