--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
     "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/serve-static": "^5.0.3",
     "@prisma/client": "^6.7.0",
     "@quixo3/prisma-session-store": "^3.1.13",
     "@tanstack/vue-query": "^5.80.6",
