--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,5 +27,5 @@ jobs:
           cache: 'npm'
 
       - run: npm ci --legacy-peer-deps
-      - run: nx run @raport-digital/client:build:production
-      - run: nx run @raport-digital/server:build:production
+      - run: npx nx run @raport-digital/client:build:production
+      - run: npx nx run @raport-digital/server:build:production
