--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'npm'
 
       - run: npm ci --legacy-peer-deps
-      - run:
+      - run: |
           cd apps/server
           npx prisma generate
       - run: npx nx run @raport-digital/server:build:production
