--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
           cache: 'npm'
 
       - run: npm ci --legacy-peer-deps
+      - uses: nrwl/nx-set-shas@v4
       - run: |
           cd apps/server
           npx prisma generate
