fix: deploy workflow

--- a/.github/workflows/release_raport-digital.yml
+++ b/.github/workflows/release_raport-digital.yml
@@ -9,6 +9,9 @@ on:
       - release
   workflow_dispatch:
 
+env:
+  NX_NO_CLOUD: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,11 +26,12 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - run: npm ci --legacy-peer-deps
+      - run: |
+          cd apps/server
+          npx prisma generate
+      - run: npx nx run @raport-digital/server:build:production
+      - run: npx nx run @raport-digital/client:build:production
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -44,7 +48,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -53,7 +57,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
