--- a/.github/workflows/release_raport-digital.yml
+++ b/.github/workflows/release_raport-digital.yml
@@ -34,7 +34,7 @@ jobs:
       - run: npx nx run @raport-digital/client:build:production
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./* -r -y
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
