--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "@raport-digital/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "node apps/server/dist/main.js",
+    "heroku-prebuild": "cd apps/server && npx prisma generate",
+    "heroku-build": "npx nx run @raport-digital/server:build:production && npx nx run @raport-digital/client:build:production"
+  },
   "private": true,
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
     "@fontsource/noto-sans-symbols-2": "^5.2.5",
     "@mdi/font": "^7.4.47",
