--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node apps/server/dist/main.js",
     "heroku-prebuild": "cd apps/server && npx prisma generate",
-    "heroku-build": "npx nx run @raport-digital/server:build:production && npx nx run @raport-digital/client:build:production"
+    "build": "npx nx run @raport-digital/server:build:production && npx nx run @raport-digital/client:build:production"
   },
   "private": true,
   "engines": {
